--- a/src/components/AboutMeWork.css
+++ b/src/components/AboutMeWork.css
@@ -235,7 +235,7 @@
 @media only screen and (max-width: 1000px) {
 
     .AboutMeWorkcontainer {
-        padding: 50px;
+        padding: 50px 25px;
         gap: 25px;
     }
 
