--- a/src/components/ProjectImages.css
+++ b/src/components/ProjectImages.css
@@ -19,6 +19,23 @@
   height: 100%;
   border-radius: 15px;
   box-shadow: 0px 0px 50px var(--lightGray);
+  background-color: transparent;
+}
+
+/* Safari seems to have a bug with object-fit (in small screens) so I had to give this class to project pages with single image displayed */
+
+.projectImagesItemSafari {
+  width: 100%;
+  max-height: 100%;
+  border-radius: 15px;
+  box-shadow: 0px 0px 50px var(--lightGray);
+  background-color: transparent;
+}
+
+.projectImagesSafari {
+  object-fit: cover;
+  min-height: 100%;
+  border-radius: 15px;
 }
 
 @media only screen and (max-width: 900px) {
@@ -35,6 +52,13 @@
     object-fit: cover;
     width: 100%;
     height: 100%;
+    border-radius: 15px;
+  }
+
+  .projectImagesSafari {
+    object-fit: cover;
+    width: 100%;
+    max-height: 100%;
     border-radius: 15px;
   }
 
@@ -176,7 +200,7 @@
 
 /* ToDoList App: Web Application id 14 */
 
-.projectImagesItem13:first-child {
+.projectImagesItemSafari13:first-child {
   grid-column-start: 2;
   grid-column-end: 8;
   grid-row-start: 1;
@@ -184,7 +208,7 @@
 }
 
 @media only screen and (max-width: 900px) {
-  .projectImagesItem13:first-child {
+  .projectImagesItemSafari13:first-child {
     grid-column-start: 1;
     grid-column-end: 9;
     grid-row-start: 1;
@@ -734,13 +758,13 @@
 
 /* Urmet: Iuvs Plus App id 3 */
 
-.projectImagesItem3:first-child {
+.projectImagesItemSafari3:first-child {
   grid-column-start: 2;
   grid-column-end: 8;
 }
 
 @media only screen and (max-width: 900px) {
-  .projectImagesItem3:first-child {
+  .projectImagesItemSafari3:first-child {
     grid-column-start: 1;
     grid-column-end: 9;
   }
