--- a/src/styles.css
+++ b/src/styles.css
@@ -91,6 +91,7 @@ input[type='checkbox'] {
     justify-content: space-evenly;
     gap: 0.75rem;
     padding: 100px 50px;
+    background-color: transparent;
 }
 
 .projectInfoBarTitle {
